--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
         .container img {
             display: block;
-            margin-left: auto;
-            margin-right: auto;
+            margin: 0 auto; /* Ensure image is centered */
             width: 80%; /* Make image responsive */
             height: auto;
+            max-width: 100%; /* Ensure it scales within container */
         }
 
         .toggles {
@@ -249,6 +249,7 @@
     </script>
 </body>
 </html>
+
 
 
 
