--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
             font-size: 8px;
         }
 
+        /* Hamburger Menu */
+        .hamburger-menu {
+            display: none;
+            flex-direction: column;
+            gap: 5px;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
+        .hamburger-menu div {
+            width: 30px;
+            height: 4px;
+            background: black;
+        }
+
+        /* Toggle visibility for mobile */
+        .toggles.hidden {
+            display: none;
+        }
+
         /* Responsive Styles */
         @media (max-width: 1024px) {
             body {
@@ -151,11 +173,16 @@
                 padding: 3px;
             }
 
+            .hamburger-menu {
+                display: flex;
+            }
+
             .toggles {
-                top: 10px;
-                left: 10px;
-                flex-direction: row;
+                display: none;
+                flex-direction: column;
                 gap: 5px;
+                top: 50px;
+                right: 10px;
             }
 
             .toggle-container {
@@ -177,10 +204,16 @@
     <div class="container">
         <h3>Digital Artist from SCL</h3>
         <img src="00000000000000.PNG" alt="Text Based CV Project">
-       
         <p>Former teaching assistant in Pure Data software in Sound Art Diploma at U. de Chile, where I wrote about concrete music and the futurist manifesto.<br>&nbsp;</p>
-         <p>Currently working on Computer Vision and text-based applications.<br>&nbsp;</p>
+        <p>Currently working on Computer Vision and text-based applications.<br>&nbsp;</p>
         <p>More? Listen to the <a href="https://labalahumana.bandcamp.com/" target="_blank"> bandcamp </a> site.<br> , or contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p>
+    </div>
+
+    <!-- Hamburger Menu -->
+    <div class="hamburger-menu" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
 
     <div class="toggles">
@@ -197,6 +230,11 @@
                     </div>
                 `);
             });
+
+            function toggleMenu() {
+                const toggles = document.querySelector(".toggles");
+                toggles.classList.toggle("hidden");
+            }
         </script>
     </div>
 
@@ -249,9 +287,6 @@
     </script>
 </body>
 </html>
-
-
-
 
 
 
