--- a/app1.html
+++ b/app1.html
@@ -1,133 +1,276 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style & Color Generator</title>
+    <title>Hi!</title>
     <link href="Hi!_files/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <style>
         body {
-            background-color: #f0f8ff;
-            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            font-size: 14px;
+            background-color: #fff;
+            color: #000;
+            text-align: left;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            height: 100vh;
+            transition: all 0.5s ease;
+            padding: 20px;
+            overflow-x: auto;
         }
 
         .container {
-            text-align: center;
+            width: 100%;
+            max-width: 800px;
+            padding: 20px;
+            text-align: justify;
             margin-top: 20px;
+            overflow: auto;
+        }
+
+        .container p {
+            margin-bottom: 1em;
+        }
+
+        .container img {
+            display: block;
+            margin: 0 auto;
+            width: 80%;
+            height: auto;
+            max-width: 100%;
+            overflow: hidden;
+        }
+
+        .toggles {
+            position: fixed;
+            top: 50%;
+            left: 5px;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
+            z-index: 10;
+            padding: 10px;
+            max-width: 25%;
+            overflow-x: hidden;
+        }
+
+        .toggle-container {
+            display: flex;
+            align-items: center;
+            gap: 3px;
+        }
+
+        .toggle {
+            width: 25px;
+            height: 12px;
+            background: #ccc;
+            border-radius: 10px;
+            position: relative;
+            cursor: pointer;
+        }
+
+        .toggle:before {
+            content: '';
+            width: 10px;
+            height: 10px;
+            background: white;
+            position: absolute;
+            top: 1px;
+            left: 2px;
+            border-radius: 50%;
+            transition: 0.3s;
+        }
+
+        .toggle.active {
+            background: #4CAF50;
+        }
+
+        .toggle.active:before {
+            left: 13px;
+        }
+
+        .toggle-label {
+            font-size: 10px;
+        }
+
+        .movie-quotes {
+            position: fixed;
+            bottom: 5px;
+            right: 5px;
+            font-size: 8px;
+            text-align: right;
+            width: 20%;
+            max-height: 50vh;
+            overflow-y: auto;
+            word-wrap: break-word;
         }
 
         .footer {
-            text-align: center;
             position: fixed;
-            bottom: 10px;
-            width: 100%;
+            bottom: 5px;
+            left: 5px;
+            font-size: 8px;
         }
 
-        .theme-list {
-            max-height: 300px;
-            overflow-y: auto;
-            margin-top: 20px;
-            background-color: #fff;
-            padding: 10px;
-            border-radius: 8px;
+        /* Responsive Styles */
+        @media (max-width: 1024px) {
+            body {
+                font-size: 12px;
+            }
+
+            .container {
+                padding: 5px;
+            }
+
+            .toggles {
+                top: 10px;
+                left: 10px;
+                flex-direction: row;
+                gap: 10px;
+                max-width: 33%;
+            }
+
+            .toggle-container {
+                font-size: 10px;
+            }
+
+            .movie-quotes {
+                font-size: 6px;
+                width: 40%;
+            }
+
+            .footer {
+                font-size: 7px;
+            }
         }
 
-        .color-box {
-            width: 30px;
-            height: 30px;
-            margin: 2px;
-            display: inline-block;
-        }
+        @media (max-width: 600px) {
+            body {
+                font-size: 10px;
+            }
 
-        .color-info {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 10px;
-        }
+            .container {
+                padding: 3px;
+            }
 
-        .color-info div {
-            margin: 5px;
+            .toggles {
+                flex-direction: column;
+                gap: 5px;
+                top: 10px;
+                left: 10px;
+                max-width: 50%;
+            }
+
+            .toggle-container {
+                font-size: 8px;
+            }
+
+            .movie-quotes {
+                font-size: 5px;
+                width: 100%;
+            }
+
+            .footer {
+                font-size: 6px;
+            }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h3>Daily Word and Color Generator</h3>
-        <p>Click to generate a daily word and its color theme:</p>
-        <button class="btn btn-primary" onclick="generateWord()">Generate Word</button>
-        <div id="wordOutput"></div>
-        <div id="bookTitle"></div>
+        <h3>Digital Artist from SCL</h3>
+        <img src="00000000000000.PNG" alt="Text Based CV Project">
+        <p>Former teaching assistant in Pure Data software in Sound Art Diploma at U. de Chile, where I wrote about concrete music and the futurist manifesto.<br>&nbsp;</p>
+        <p>Currently working on Computer Vision and text-based applications.<br>&nbsp;</p>
+        <p>More? Listen to the <a href="https://labalahumana.bandcamp.com/" target="_blank"> bandcamp </a> site.<br> , or contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p>
+        <p>... and go to the apps <a href="demo.html">page</a> where you can find all demo apps from app1 to app9.</p>
+    </div>
 
-        <!-- Theme List with Scroll -->
-        <div class="theme-list">
-            <h4>Color Themes</h4>
-            <ul id="themeList"></ul>
-        </div>
+    <div class="toggles">
+        <script>
+            const themes = [
+                "hello_kitty", "keroppi", "snoopy", "forest", "food", "flowers", "unicorn", "kuromi",
+                "gothic", "sky", "space", "tech", "minimal", "modern", "retro", "vintage", "punk", "classic", 
+                "artsy", "futuristic", "pop", "geometric", "boho", "eco", "urban", "neon", "cosmic", "whimsical"
+            ];
 
-        <div class="color-info" id="colorInfo"></div>
+            themes.forEach(theme => {
+                document.write(`
+                    <div class="toggle-container">
+                        <div class="toggle" id="${theme}" onclick="setTheme('${theme}')"></div>
+                        <span class="toggle-label">${theme.replace('_', ' ')}</span>
+                    </div>
+                `);
+            });
+        </script>
+    </div>
+
+    <div class="movie-quotes">
+        <script>
+            const quotes = [
+                "Je vais lui faire une offre qu'il ne pourra pas refuser.", "Let there be light.", 
+                "I think, therefore I am.", "To be or not to be.", "The only thing we have to fear is fear itself.",
+                "That's one small step for man, one giant leap for mankind.", "In the beginning, God created the heavens and the earth.",
+                "To infinity and beyond!", "May the force be with you.", "Live long and prosper.",
+                "I’ll be back.", "Here's looking at you, kid.", "I feel the need – the need for speed.",
+                "The stuff that dreams are made of.", "It’s a beautiful day in the neighborhood.",
+                "I coulda had class. I could’ve been a contender.", "Toto, I’ve a feeling we’re not in Kansas anymore.",
+                "I’m king of the world!", "You can’t handle the truth!", "E.T. phone home.", 
+                "You had me at ‘hello’.", "Why so serious?", "Carpe Diem.", "Mamma mia!",
+                "Houston, we have a problem.", "I’ll make him an offer he can’t refuse.", "You talking to me?",
+                "Here’s Johnny!", "Keep the change, ya filthy animal.", "It’s alive! It’s alive!", 
+                "You’ve got a friend in me.", "There’s no place like home.", "I am your father.", 
+                "Don’t call it a comeback!", "I wish I knew how to quit you.", "You can’t stop the signal.",
+                "The force will be with you, always.", "I am Groot.", "I drink your milkshake!", "Yippee-ki-yay, motherfucker.",
+                "I’m Batman.", "It’s not who I am underneath, but what I do that defines me.",
+                "I’m the king of the world!", "It’s a trap!", "Just keep swimming.", "This is the start of a beautiful friendship.",
+                "I’ve seen things you people wouldn’t believe.", "I can resist everything except temptation.",
+                "After all, tomorrow is another day!", "Nobody puts Baby in a corner.", "I’m too old for this shit.", 
+                "I am vengeance. I am the night.", "You’ll shoot your eye out.", "It’s a wonderful life."
+            ];
+            const quote = quotes[Math.floor(Math.random() * quotes.length)];
+            document.write(quote);
+        </script>
     </div>
 
     <div class="footer">
-        <a href="index.html">Back to Main Page</a>
+        <a href="demo.html">Go to App Demos</a>
     </div>
 
     <script>
-        // List of words and books
-        const words = ["Innovation", "Creativity", "Pioneering", "Art", "Design", "Technology", "Imagination", "Futuristic"];
-        const books = {
-            Innovation: "The Innovator's Dilemma by Clayton Christensen",
-            Creativity: "Steal Like an Artist by Austin Kleon",
-            Pioneering: "The Pioneer Woman by Ree Drummond",
-            Art: "The Art Book",
-            Design: "The Design of Everyday Things by Don Norman",
-            Technology: "The Second Machine Age by Erik Brynjolfsson",
-            Imagination: "The Imagination Revolution by Ben Waggoner",
-            Futuristic: "The Singularity is Near by Ray Kurzweil"
-        };
+        function setTheme(theme) {
+            const toggles = document.querySelectorAll(".toggle");
+            toggles.forEach(toggle => toggle.classList.remove("active"));
+            document.getElementById(theme).classList.add("active");
 
-        // Color themes with harmonious tones
-        const colorThemes = [
-            { theme: 'Ocean Breeze', mainColor: '#1E90FF', harmonizedColor: '#32CD32', fourthColor: '#FFD700' },
-            { theme: 'Sunset Glow', mainColor: '#FF6347', harmonizedColor: '#FFD700', fourthColor: '#FF8C00' },
-            { theme: 'Forest Green', mainColor: '#228B22', harmonizedColor: '#32CD32', fourthColor: '#8B4513' },
-            { theme: 'Morning Sky', mainColor: '#87CEFA', harmonizedColor: '#00BFFF', fourthColor: '#1E90FF' },
-            { theme: 'Lavender Dream', mainColor: '#E6E6FA', harmonizedColor: '#DDA0DD', fourthColor: '#8A2BE2' },
-            // Add more themes here
-        ];
+            const themeStyles = {
+                hello_kitty: { background: "#ffe4e1", color: "#ff1493", font: "Arial Rounded MT", emailColor: "#ff1493" },
+                keroppi: { background: "#b6e6b3", color: "#008000", font: "Comic Sans MS", emailColor: "#008000" },
+                snoopy: { background: "#fefefe", color: "#000", font: "Courier New", emailColor: "#000" },
+                forest: { background: "#228B22", color: "#fff", font: "Georgia", emailColor: "#fff" },
+                food: { background: "#ffebcd", color: "#ff6347", font: "Verdana", emailColor: "#ff6347" },
+                flowers: { background: "#fffae1", color: "#ff69b4", font: "Times New Roman", emailColor: "#ff69b4" },
+                unicorn: { background: "#e0e0ff", color: "#b19cd9", font: "Georgia", emailColor: "#b19cd9" },
+                kuromi: { background: "#f5d3f7", color: "#000", font: "Arial", emailColor: "#000" },
+                // Add more themes as needed
+            };
 
-        function generateWord() {
-            const word = words[Math.floor(Math.random() * words.length)];
-            document.getElementById('wordOutput').innerText = `Today's Word: ${word}`;
-            document.getElementById('bookTitle').innerText = `Book to read: ${books[word]}`;
-
-            // Random color theme logic
-            const randomTheme = colorThemes[Math.floor(Math.random() * colorThemes.length)];
-            displayColorTheme(randomTheme);
+            const selectedTheme = themeStyles[theme] || themeStyles["hello_kitty"];
+            document.body.style.backgroundColor = selectedTheme.background;
+            document.body.style.color = selectedTheme.color;
+            document.getElementById("email").style.color = selectedTheme.emailColor;
+            document.body.style.fontFamily = selectedTheme.font;
         }
-
-        function displayColorTheme(theme) {
-            // Display the color theme
-            const colorInfoDiv = document.getElementById('colorInfo');
-            colorInfoDiv.innerHTML = `
-                <div><div class="color-box" style="background-color:${theme.mainColor}"></div><span>${theme.mainColor}</span></div>
-                <div><div class="color-box" style="background-color:${theme.harmonizedColor}"></div><span>${theme.harmonizedColor}</span></div>
-                <div><div class="color-box" style="background-color:${theme.fourthColor}"></div><span>${theme.fourthColor}</span></div>
-            `;
-        }
-
-        // Add themes to the list with scroll functionality
-        const themeList = document.getElementById('themeList');
-        colorThemes.forEach(theme => {
-            const li = document.createElement('li');
-            li.textContent = theme.theme;
-            li.style.backgroundColor = theme.mainColor;
-            themeList.appendChild(li);
-        });
     </script>
 </body>
 </html>
+
 
 
 
